<resources>
    <string name="app_name">Наш Дом</string>
    <string name="title_home">Главная</string>
    <string name="title_complaints">Обращения</string>
    <string name="title_events">Новости</string>
    <string name="title_surveys">Опросы</string>
    <string name="title_video">Видео</string>
    <string name="title_rest">Остальное</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="published">Опубликовано жалоб и предложений</string>
    <string name="decided">Решено проблем</string>
    <string name="title">Присоединяйтесь к проекту\n
        <b>«Наш Дом Рязань»</b>\n
        и делайте свой дом лучше!</string>
    <string name="in">Вход</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="newComplaint">Добавить жалобу</string>
    <string name="enter_mail">Введите e-mail</string>
    <string name="enter_password">Введите пароль</string>
    <string name="title_registration">Регистрация</string>
    <string name="back">Назад</string>
    <string name="next">Дальше</string>
    <string name="profile">Профиль</string>
    <string name="edit">Редактировать</string>
    <string name="more">Подробнее</string>
    <string name="add">Добавить новый опрос</string>
    <string name="addCom">Добавить новое обращение</string>
    <string name="enter_number">Введите номер телефона</string>
    <string name="out">выход</string>

    <string name="APIU">API-YOUTUBE</string>

    <string-array name="dates">
        <item>Все</item>
        <item>За этот месяц</item>
        <item>За эту неделю</item>
        <item>За этот год</item>
    </string-array>

    <string-array name="types">
        <item>Видео</item>
        <item>Заседания правительства</item>
    </string-array>

    <string-array name="items">
        <item>Мои сообщения</item>
        <item>Мои настройки</item>
        <item>Избранное</item>
        <item>Мой Дом</item>
        <item>Пользовательское соглашение</item>
        <item>Регламент</item>
        <item>Правила модерации</item>
        <item>Обратная связь</item>
    </string-array>

    <string-array name="profile">
        <item>Подробная информация</item>
    </string-array>


    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <string-array name="city">
        <item>Выберите</item>
        <item>ЖК «Алые паруса» 10 этажный 5 секционный 216 кв дом</item>
        <item>ЖК «Видный» 13 этажный 3 секционный 250 квартирный дом</item>
        <item>ЖК «Виктори парк» 13 этажный 1 секционный 84 кв дом секц1</item>
        <item>ЖК «Виктори парк» 15 этажный 1 секционный 56 кв дом сеекц2</item>
        <item>ЖК «Горожанинъ» 12 этажный 1 секционный 132 квартирный дом</item>
        <item>ЖК «Гранд Комфорт» 24 этажный 2 секционный 305 квартирный дом</item>
        <item>ЖК «Два Капитана» 18 этажный 1 секционный 159 квартирный дом</item>
        <item>ЖК «Невский» 25 этажный 2 секционный 421 кв дом</item>
        <item>ЖК «Рокоссовский» 25 этажный 2 секционный 308 квартирный дом</item>
        <item>ЖК «Лайт Сити LS» 18 этажный 1 секционный 194 квартирный дом</item>
        <item>ЖК «Королев» 16 этажный 4 секционный 491 квартирный дом</item>
        <item>ЖК «Маргелов» 23 этажный 2 секционный 398 квартирный дом</item>
        <item>ЖК «Метропарк» 22 этажный 1 секционный  283 квартирный дом</item>
    </string-array>

    <string-array name="generalities">
        <item>1.1. Настоящие Единые правила модерации сообщений подготовлены
            в целях обеспечения публикации сообщений
            пользователей на портале «Наш Дом Рязань» (далее – Портал).</item>
        <item>1.2. В настоящих Единых правилах модерации сообщений используются следующие понятия:</item>
        <item>1.2.1. Блокировка – техническая мера ограничения возможностей действий пользователей на Портале,
            выраженная во временном запрете направления сообщений данных пользователей на Портал сроком на 30 календарных дней.</item>
        <item>1.2.2. Отклонение сообщения – недопущение публикации сообщения на Портале.</item>
        <item>1.3. Текст сообщений, подлежащих публикации на Портале, должен быть написан на русском языке.</item>
        <item>1.4. Фотографии публикуются на Портале только в качестве иллюстраций к сообщению пользователя.
            Не допускается публикация фотографий, акцентирующих внимание на образах конкретных людей,
            содержащих персональные данные, имеющих разрешение и качество, недостаточное для
            различения объектов и выполненных на них работ, фотографий, требующих редактирования,
            в частности переворачивания, кадрирования или приближения.</item>
        <item>1.5. Для публикации принимаются фотографии в формате *jpg, *png совокупным размером не более 20 Мб.</item>
        <item>1.6. В одном сообщении пользователь может направить не более 5 фотографий.</item>
        <item>1.7. Материалы, направленные пользователями в Единую редакцию, не редактируются и не возвращаются им.</item>
        <item>1.8. Обращаем Ваше внимание на то, что Ваше сообщение не является официальным обращением
            гражданина в органы исполнительной власти. Тем не менее, Ваше сообщение направляется для
            рассмотрения в исполнительные органы государственной власти Рязанской области и обрабатывается в порядке,
            установленном Регламентом обработки и публикации информации на портале «Наш Дом Рязань».</item>
    </string-array>


    <string-array name="TheReasonForTheRejection">
        <item>2.1. Тематика сообщения не соответствует предложенным на Портале проблемным темам.</item>
        <item>2.2. Сообщение содержит информацию о проблеме, по которой ранее был дан ответ о невозможности ее решения.</item>
        <item>2.3. Сообщение не содержит конкретных фактов, на основании которых возможно провести проверку.</item>
        <item>2.4. Текст сообщения полностью повторяет текст сообщения, ранее опубликованного на Портале
            в отношении одного и того же объекта, при этом ответ исполнительного органа государственной
            власти Рязанской области по данному сообщению не опубликован.</item>
        <item>2.5. Сообщение содержит безосновательные, недоказанные обвинения в адрес других пользователей Портала,
            Единой редакции, исполнительных органов государственной власти Рязанской области, физических или юридических лиц.</item>
        <item>2.6. Сообщение содержит информацию, направленную на пропаганду ненависти и дискриминации по расовому,
            этническому, половому, религиозному, социальному признакам, ущемление прав меньшинств, несовершеннолетних,
            причиняющую и призывающую к причинению им вреда в любой форме; оскорбления в адрес других пользователей Портала,
            Единой редакции, исполнительных органов государственной власти Рязанской области, иных лиц или организаций.</item>
        <item>2.7. Сообщение содержит персональные данные, в том числе персональные данные третьих лиц, распространяемые без их согласия.</item>
        <item>2.8. Сообщение содержит информацию, распространяемую в коммерческих целях либо в любых других целях,
            отличных от целей создания и функционирования Портала.</item>
        <item>2.9. Фотография, сопровождающая сообщение пользователя, не отвечает требованиям пункта
            1.4 настоящих Единых правил модерации сообщений, при этом сообщение указывает на данную фотографию
            как на единственный факт, на основании которого возможно проведение проверки.</item>
        <item>2.10. Сообщение содержит ошибки и/или опечатки, препятствующие пониманию смысла сообщения,
            написано не кириллическим алфавитом, полностью или преимущественно заглавными (прописными) буквами,
            без знаков препинания, содержит не общеупотребимые сокращения.</item>
        <item>2.11. Сообщение содержит нецензурную лексику либо ее производные.</item>
        <item>2.12. Сообщение содержит послания, просьбы, прошения личного характера.</item>
        <item>2.13. Сообщение содержит описание нескольких проблем по разным проблемным темам.</item>
        <item>2.14. Сообщение содержит благодарность, несоизмеримую с фактом выполненных работ на объекте.</item>
        <item>2.15. Адрес, указанный в сообщении, не соответствует адресу выбранного объекта либо требует уточнения.</item>
        <item>2.16. Несоответствие личных данных пользователя требованиям п. 4.4.6 – 4.4.9 Соглашения о пользовании Порталом.</item>
    </string-array>


    <string-array name="TheReasonToLimitTheActions">
        <item>3.1. Сообщение пользователя Портала содержит угрозы действиями, которые способны нанести
            ущерб другому пользователю Портала, Единой редакции, исполнительным органам государственной
            власти Рязанской области, иным лицам или организациям, а также угрозы политического,
            религиозного или иного преследования.</item>
        <item>3.2. Пользователь Портала осуществляет действия, которые могут быть классифицированы
            как действия спам-роботов. Пользователь блокируется, если он отправил на Портал не менее
            трех одинаковых сообщений за 10 минут, либо не менее 20 сообщений в течение 12 часов.</item>
    </string-array>

    <string name="title_activity_fullscreen_photo">FullscreenPhotoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Complaint_Question">Жалоба/Вопрос</string>
    <string name="Proposal">Предложение</string>
    <string name="addVariant">Добавить вариант</string>
    <string name="publishedSurvey">Отправить</string>
    <string name="addList">Добавить</string>
    <string name="saveUser">Сохранить изменения</string>
    <string name="saveSetting">Сохранить настройки</string>
    <string name="vote">Проголосовать</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="publishedNews">Добавить новость</string>
    <string name="title_activity_start_help">StartHelpActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="many_text_ps_1">\tЭто многофункциональный инструмент онлайн взаимодействия между жителями и органами исполнительной власти.\n
        \tСоздание портала позволяет перейти от работы с бумажными обращениями к интерактивному взаимодействию органов власти и жителей в режиме 24/7.</string>
    <string name="mission_myHome">\tОбъединить соседей и сделать город, в котором мы живем чище, красивее и лучше…</string>
    <string name="skip">Пропустить</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>


</resources>
