<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_complaints"
        android:icon="@drawable/ic_compl"
        android:title="@string/title_complaints" />
    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_events"
        android:title="@string/title_events" />
    <item
        android:id="@+id/navigation_surveys"
        android:icon="@drawable/ic_surv"
        android:title="@string/title_surveys" />
    <!--<item
        android:id="@+id/navigation_video"
        android:icon="@drawable/ic_video"
        android:title="@string/title_video"/>-->
    <!-- <item
         android:id="@+id/navigation_rest"
         android:icon="@drawable/ic_rest"
         android:title="@string/title_rest" />-->
 </menu>
