<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="35dp"
    android:scrollbars="none"
    android:background="#fff">

<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#fff">

    <RelativeLayout
        android:layout_height="300sp"
        android:layout_width="wrap_content"
        android:background="@drawable/ryazan_62">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/title"
            android:textColor="#FFF"
            android:textSize="25sp" />

        <Button
            android:id="@+id/newComplaint"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200sp"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:background="@drawable/start_button2"
            android:text="@string/newComplaint"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="left"
                android:text="@string/published"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="10dp"
                android:text="@string/decided"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFF"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_people" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="34dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="3dp"
                android:gravity="left"
                android:text="20000"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#63afe1"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"
                android:src="@drawable/ic_check" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="45dp"
                android:layout_marginRight="45dp"
                android:gravity="right"
                android:text="1800"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#f8983e"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>


    <ViewFlipper
        android:id="@+id/viewflipper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autoStart="true"
        android:background="#fff"
        android:flipInterval="2500"
        android:inAnimation="@anim/flipin"
        android:outAnimation="@anim/flipout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#fff">
    <TextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:text="Количество дней обработки сообщения"
        android:gravity="center"
        android:textColor="#272b46"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"/>

    <com.github.anastr.speedviewlib.SpeedView
        android:id="@+id/speedView1"
        android:layout_marginTop="15dp"
        android:layout_width="150dp"
        android:layout_below="@+id/t1"
        android:layout_centerInParent="true"
        android:layout_height="300dp"
        android:layout_gravity="center"
        app:sv_lowSpeedPercent="50"
        app:sv_minSpeed="1"
        app:sv_maxSpeed="30"
        app:sv_tickNumber="5"
        app:sv_unit="дней"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_alignParentTop="true"
                android:text="Некий другой график"
                android:gravity="center"
                android:textColor="#272b46"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"/>

            <com.github.anastr.speedviewlib.SpeedView
                android:id="@+id/speedView2"
                android:layout_marginTop="15dp"
                android:layout_width="150dp"
                android:layout_below="@+id/t2"
                android:layout_centerInParent="true"
                android:layout_height="300dp"
                android:layout_gravity="center"
                app:sv_lowSpeedPercent="50"
                app:sv_minSpeed="1"
                app:sv_maxSpeed="30"
                app:sv_tickNumber="5"
                app:sv_unit="дней"/>
        </RelativeLayout>
    </ViewFlipper>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:textColor="#272b46"
        android:textSize="16sp"
        android:text="Результаты работы портала"
        android:gravity="center"/>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:background="#fff"
        android:layout_marginTop="8dp">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#fff">

            <android.support.v7.widget.RecyclerView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/recyclerViewProject"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:divider="@null" />
        </HorizontalScrollView>

    </FrameLayout>

</LinearLayout>
</ScrollView>